--- a/work/pom.xml
+++ b/work/pom.xml
@@ -91,7 +91,12 @@
             <artifactId>spring-security-core</artifactId>
             <version>5.6.3</version>
         </dependency>
-
+        <!-- 支持 @ConfigurationProperties 注解 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
 
     </dependencies>
 
